--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,12 @@
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
 			<artifactId>elasticsearch-rest-client</artifactId>
-			<version>6.0.1</version>
+			<version>6.1.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.elasticsearch.client</groupId>
+		    <artifactId>elasticsearch-rest-client-sniffer</artifactId>
+		    <version>6.1.1</version>
 		</dependency>
 	</dependencies>
 
