--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 		    <artifactId>elasticsearch-rest-client-sniffer</artifactId>
 		    <version>6.1.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.elasticsearch.client</groupId>
+		    <artifactId>elasticsearch-rest-high-level-client</artifactId>
+		    <version>6.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
