--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 		    <artifactId>elasticsearch-rest-high-level-client</artifactId>
 		    <version>6.1.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.33</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
